fix cart alignment

--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,7 @@ table thead tr th {
 
 table td, table thead tr {
   font-size: 16px;
+  text-align: center;
 }
 
 .btn-delete {
